fix spacing and colors

--- a/less/bootswatch.less
+++ b/less/bootswatch.less
@@ -8,12 +8,6 @@
   border-width: 0 1px @width 1px;
 }
 
-// Navbar =====================================================================
-
-.navbar  {
-  .shadow();
-}
-
 // Buttons ====================================================================
 
 .btn {
@@ -97,203 +91,6 @@
   }
 }
 
-.navbar-btn {
-  &:hover {
-    margin-top: 8px
-  }
-
-  &:active {
-    margin-top: 9px
-  }
-
-  &.btn-sm {
-    &:hover {
-      margin-top: 11px
-    }
-
-    &:active {
-      margin-top: 12px
-    }
-  }
-
-  &.btn-xs {
-    &:hover {
-      margin-top: 15px
-    }
-
-    &:active {
-      margin-top: 16px
-    }
-  }
-}
-
-// Typography =================================================================
-
-.text-primary,
-.text-primary:hover {
-  color: @brand-primary;
-}
-
-.text-success,
-.text-success:hover {
-  color: @brand-success;
-}
-
-.text-danger,
-.text-danger:hover {
-  color: @brand-danger;
-}
-
-.text-warning,
-.text-warning:hover {
-  color: @brand-warning;
-}
-
-.text-info,
-.text-info:hover {
-  color: @brand-info;
-}
-
-// Tables =====================================================================
-
-table,
-.table {
-
-  a:not(.btn) {
-    text-decoration: underline;
-  }
-
-  .success,
-  .warning,
-  .danger,
-  .info {
-    color: #fff;
-
-    a:not(.btn) {
-      color: #fff;
-    }
-  }
-
-  > thead > tr > th,
-  > tbody > tr > th,
-  > tfoot > tr > th,
-  > thead > tr > td,
-  > tbody > tr > td,
-  > tfoot > tr > td {
-    border-color: transparent;
-  }
-}
-
-// Forms ======================================================================
-
-.form-control {
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-}
-
-label {
-  font-weight: normal;
-}
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .form-control-feedback {
-    color: @brand-warning;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 1px solid @brand-warning;
-    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-  }
-
-  .input-group-addon {
-    border: 1px solid @brand-warning;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 1px solid @brand-danger;
-    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-  }
-
-  .input-group-addon {
-    border: 1px solid @brand-danger;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 1px solid @brand-success;
-    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-  }
-
-  .input-group-addon {
-    border: 1px solid @brand-success;
-  }
-}
-
-// Navs =======================================================================
-
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: transparent;
-  }
-}
-
-.nav-tabs {
-
-  > li > a {
-    margin-top: 6px;
-    border-color: @navbar-default-border;
-    color: @gray-dark;
-    .transition(all 0.2s ease-in-out);
-  }
-
-  > li > a:hover,
-  > li > a:focus,
-  > li.active > a,
-  > li.active > a:hover,
-  > li.active > a:focus,
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    padding-top: @padding-large-vertical + 3px;
-    padding-bottom: @padding-large-vertical + 3px;
-    margin-top: 0;
-  }
-
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: @navbar-default-border;
-  }
-
-  > li.disabled > a:hover,
-  > li.disabled > a:focus {
-    padding-top: @padding-large-vertical;
-    padding-bottom: @padding-large-vertical;
-    margin-top: 6px;
-  }
-}
-
 .dropdown-menu {
   margin-top: 0;
   .shadow();
@@ -374,62 +171,4 @@ label {
     color: #fff;
     opacity: 1;
   }
-}
-
-.alert {
-  .shadow();
-
-  .alert-link {
-    font-weight: normal;
-    color: #fff;
-    text-decoration: underline;
-  }
-}
-
-.label {
-  font-weight: normal;
-}
-
-// Progress bars ==============================================================
-
-.progress {
-  border: 1px solid @navbar-default-border;
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.1));
-
-  &-bar {
-    .box-shadow(inset 0 -4px 0 rgba(0, 0, 0, 0.15));
-  }
-}
-
-// Containers =================================================================
-
-.well {
-  border: 1px solid @navbar-default-border;
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.05));
-}
-
-.jumbotron {
-  border: 1px solid @navbar-default-border;
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.05));
-}
-
-.panel {
-  border: 1px solid @navbar-default-border;
-  .shadow();
-
-  &-default {
-    .close {
-      color: @text-color;
-    }
-  }
-}
-
-.modal {
-  .close {
-    color: @text-color;
-  }
-}
-
-.popover {
-  color: @text-color;
 }
